--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,10 +25,11 @@ titles:
   tr      : &TR       Ana Sayfa
   # @end locale config
 show_title: false
+cover: /docs/assets/images/axure/articles-item-cover-excerpt.jpg
 articles:
   data_source: paginator.posts
   article_type: BlogPosting
-  show_cover: true
+  show_cover: false
   show_excerpt: true
   show_readmore: true
   show_info: true
