--- a/_includes/article-list.html
+++ b/_includes/article-list.html
@@ -48,7 +48,7 @@
           {%- if include.cover_size == 'lg' -%}
             <img class="image image--lg" src="{{ _article_cover }}" />
           {%- elsif include.cover_size == 'sm' -%}
-            <img class="image image--sm" src="{{ _article_cover }}" />
+            <img class="image image--xs" src="{{ _article_cover }}" />
           {%- else -%}
             <img class="image" src="{{ _article_cover }}" />
           {%- endif -%}
