--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ articles:
   show_excerpt: true
   show_readmore: true
   show_info: true
-  cover_size: sm
+  cover_size: lg
   
 ---
 <div class="layout--home">
